Source/WebKit2/WebProcess/UserContent/WebUserContentController.cpp
@@ -117,6 +117,7 @@ public:
 
     virtual ~WebUserMessageHandlerDescriptorProxy()
     {
+        m_descriptor->invalidateClient();
     }
 
     // WebCore::UserMessageHandlerDescriptor::Client
